--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Photo Collage</title>
@@ -7,16 +8,27 @@
 </head>
 <style>
     @keyframes fade_in {
-        from {opacity: 0;}
-        to {opacity: 1;}
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
     }
 
     @keyframes fade_out {
-        from {opacity: 1;}
-        to {opacity: 0;}
+        from {
+            opacity: 1;
+        }
+
+        to {
+            opacity: 0;
+        }
     }
 
-    html,body {
+    html,
+    body {
         height: 100%;
         width: 100%;
         background-color: black;
@@ -41,9 +53,12 @@
         top: 50%;
         transform: translateY(-50%);
     }
+
 </style>
 <script>
     let collage = new Collage()
 </script>
-<body onresize="collage.update()" onload="collage.run(5)"></body>
+
+<body onresize="collage.update()" onload="collage.run({{ collage_interval }})"></body>
+
 </html>
